# decodr

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
decodr/: api.py
decodr/ciphers/stream/: repeating_xor.py  xor.py
decodr/detectors/: autodetect.py  file_magic.py
decodr/encodings/: base64_mod.py
pydecodr/: __init__.py  api.py  cli.py
pydecodr/ciphers/: __init.py
pydecodr/ciphers/classical/: __init__.py  affine.py  atbash.py  bacon.py  caesar.py  gronsfeld.py  hill.py  homophonic.py  rot13.py  rot47.py  substitution.py
pydecodr/ciphers/fractionation/: __init__.py  adfgvx.py  adfgx.py  bazeries.py  bifid.py  four_square.py  nihilist.py  polybius.py  trifid.py
pydecodr/ciphers/modern/: aes.py  hashes.py  (+1 more)
pydecodr/detectors/: autodetect.py  file_magic.py
pydecodr/encodings/: base32_mod.py  base64_mod.py  base85.py  hex_mod.py  morse.py  url_mod.py
pydecodr/utils/: fmt.py
src/decodr/: __init__.py  api.py  cli.py
tests/: test_columnar.py  test_detectors.py  test_fractionation_adfgx.py  test_fractionation_bifid.py  test_modern_hashes.py  test_railfence.py
tests/classical/: test_affine.py  test_atbash.py  test_bacon.py  test_caesar.py  test_gronsfeld.py  test_hill.py  test_homophonic.py  test_rot47.py  test_rot_13.py  test_substitution.py
tests/encoding/: test_morse.py
tests/fractionation/: test_4square.py  test_adgfvx.py  test_bazeries.py  test_bifid.py  test_fractionation_adfgx.py  test_fractionation_bifid.py  test_nihilist.py  test_polybius.py  test_trifid.py
tests/modern/: test_modern_aes.py  test_modern_hashes.py  test_modern_rsa.py
tests/polyalphabetic/: test_autokey_vigenere.py  test_beaufort.py  test_playfair.py  test_porta.py  test_running_key.py  test_vigenere.py
tests/rotor/: test_rotor_enigma.py
tests/stream/: test_stream.py
tests/transposition/: test_columnar.py  test_double_transposition.py  test_myszkowski.py  test_railfence.py  test_route.py
web/flaskapp/: package-lock.json  package.json  requirements.txt  wsgi.py
(+36 files in other folders)
